--- a/style.css
+++ b/style.css
@@ -438,33 +438,39 @@ height: 70%;
 	height:198px;
 	width:255px;
 	margin-left: 10px;
+	box-shadow: 8px 8px 8px;
 	
 }
 
 .grid2{
 	height:198px;
 	width:255px;
+	box-shadow: 8px 8px 8px;
 }
 
 .grid3{
 	height:198px;
 	width:255px;
+	box-shadow: 8px 8px 8px;
 }
 
 .grid4{
 	height:198px;
 	width:255px;
 	margin-left: 10px;
+	box-shadow: 8px 8px 8px;
 }
 
 .grid5{
 	height:198px;
 	width:255px;
+	box-shadow: 8px 8px 8px;
 }
 
 .grid6{
 	height:198px;
 	width:255px;
+	box-shadow: 8px 8px 8px;
 }
 
 .heading3{
