--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
 }
 
 .background{
-	background: url(background.jpg); /*https://www.pexels.com/photo/silver-and-black-laptop-computer-1229861*/
+	background: url(background.jpg); /*(Albari, n.d.)*/
 	background-size: cover;
 	
 
